--- a/upload.html
+++ b/upload.html
@@ -3,80 +3,220 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upload a Song</title>
+  <title>KARO - Home</title>
   <style>
-    body {
+    body
+    {
+      /* Appearance */
       background-color: #111;
       color: #fff;
       font-family: Arial, sans-serif;
+
+      /* Position */
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+
+      /* Size */
       height: 100vh;
       margin: 0;
     }
 
-    .upload-container {
-      background-color: #1a1a1a;
-      border: 2px solid #8230c9;
-      border-radius: 15px;
-      padding: 90px; /* was 30px — tripled */
-      width: 900px;  /* was 300px — tripled */
-      text-align: center;
-      box-shadow: 0 0 40px rgba(130, 48, 201, 0.6);
+    .central_box
+    {
+      /* Size */
+      width: 500px;
+      height: 900px;
+
+      /* Position */
+      display: flex;
+      flex-direction: column;
+      justify-content: top;
+      align-items: center;
+
+      /* Appearance */
+      background-color: #242424;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
+      border-radius: 32px;
+      margin-bottom: 80px;
+      margin-top: 40px;
+      border: 12px solid #1d1e53;
     }
 
-    h2 {
-      color: #e391ff;
-      margin-bottom: 40px;
-      font-size: 2em;
+    .input_box
+    {
+      /* Size & Position */
+      width: 400px;
+      height: 120px;
+      margin-top: 40px;
+
+      /* Appearance */
+      background-color: #242424;
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
     }
 
-    label {
-      display: block;
-      color: #d6a6ff;
-      margin-bottom: 10px;
-      font-weight: bold;
-      text-align: left;
-      font-size: 1.2em;
-    }
-
-    input[type="text"] {
-      width: 100%;
-      padding: 20px;
-      border-radius: 10px;
+    .button
+    {
+      /* Size & Position */
+      margin-top: 40px;
+      padding: 12px 25px;
       border: none;
-      outline: none;
-      margin-bottom: 40px;
-      background-color: #333;
-      color: #fff;
-      font-size: 1.1em;
-    }
+      border-radius: 16px;
 
-    .upload-btn {
+      /* Appearance */
       background-color: #b366ff;
-      color: #fff;
-      border: none;
-      padding: 20px 40px;
-      border-radius: 10px;
-      cursor: pointer;
+      color: #fce9ff;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
+
+      /* Text Customization */
       font-weight: bold;
-      font-size: 1.2em;
-      transition: background-color 0.2s ease;
+      font-size: 32px;
+
+      /* Animation */
+      transition: background-color 0.2s ease, transform 0.2s ease;
+
+      /* Other */
+      cursor: pointer;
     }
 
-    .upload-btn:hover {
+    .button:hover 
+    {
       background-color: #9c4aff;
+      transform: scale(1.05);
+    }
+
+    /* Popup background */
+    #upload_screen
+    {
+      /* Hidden by default */
+      display: none;
+
+      /* Position */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      /* Appearance */
+      background-color: rgba(0, 0, 0, 0.6);
+
+      /* Center popup */
+      justify-content: center;
+      align-items: center;
+
+      /* Layering */
+      z-index: 999;
+    }
+
+    .popup_content
+    {
+      /* Size & Position */
+      width: 800px;
+      padding: 20px;
+
+      /* Appearance */
+      background-color: #242424;
+      border-radius: 32px;
+      border: 12px solid #1d1e53;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
+      color: #fff;
+      text-align: center;
+    }
+
+    /* Text input inside popup */
+    #video_link_input
+    {
+      /* Size & Position */
+      width: 90%;
+      padding: 12px;
+      margin-top: 20px;
+      border-radius: 16px;
+      border: none;
+
+      /* Appearance */
+      outline:rgba(130, 48, 201, 0.6);
+      font-size: 20px;
+      color: #fff;
+      background-color: #5d5d5d;
+      box-shadow: 0 0 16px rgba(12, 24, 196, 0.637);
+    }
+
+    #complete_upload_button
+    {
+      /* Size & Position */
+      margin-top: 40px;
+      padding: 12px 25px;
+      border-radius: 16px;
+      border: none;
+
+      /* Appearance */
+      background-color: #555; /* gray when disabled */
+      color: #fce9ff;
+      font-weight: bold;
+      font-size: 28px;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
+
+      /* Animation */
+      transition: background-color 0.2s ease, transform 0.2s ease;
+
+      /* Other */
+      cursor: not-allowed;
+    }
+
+    #complete_upload_button.enabled
+    {
+      background-color: #b366ff;
+      cursor: pointer;
+    }
+
+    #complete_upload_button.enabled:hover
+    {
+      background-color: #9c4aff;
+      transform: scale(1.05);
+    }
+
+    /* Embedded video styling */
+    #embedded_video
+    {
+      margin-top: 30px;
+      width: 100%;
+      height: 315px;
+      border-radius: 16px;
+      box-shadow: 0 0 25px rgba(130, 48, 201, 0.6);
     }
 
   </style>
 </head>
+
 <body>
-  <div class="upload-container">
-    <h2>Upload a Song</h2>
-    <label for="link">Link</label>
-    <input type="text" id="link" placeholder="Enter song link here...">
-    <button class="upload-btn">Upload</button>
+  <div class="central_box">
+    <div class="input_box"> Maybe an alternative logo here</div>
+
+    <button class="button" id="begin_upload_button">Upload Song by Link</button>
+
+    <!-- Placeholder for embedded video -->
+    <div id="video_container"></div>
+
+    <!-- <img src="assets/logo/no_border.png" alt="KARO Key Logo"> -->
   </div>
+
+  <!-- Popup screen -->
+  <div id="upload_screen">
+    <div class="popup_content">
+      <h2>Upload Song Link</h2>
+      <p>Insert a YouTube video to convert</p>
+
+      <!-- Text box for video link -->
+      <input type="text" id="video_link_input" placeholder="Paste video link here">
+
+      <button id="complete_upload_button">Done</button>
+    </div>
+  </div>
+
+  <!-- JavaScript -->
+  <script src="code/upload.js"></script>
 </body>
 </html>
