--- a/upload.html
+++ b/upload.html
@@ -57,6 +57,7 @@
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
     }
 
+    /* Displays image at top of area */
     .input_box img 
     {
       max-width: 100%;
@@ -81,7 +82,7 @@
       font-weight: bold;
       font-size: 24px;
 
-      /* Animation */
+      /* Fancy Stuff */
       transition: background-color 0.2s ease, transform 0.2s ease;
 
       /* Other */
